fix: low severity security issues (#77)